find all paged, repositry and service, not checked